--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.6.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "stripe": "^16.12.0"
   }
 }
